<resources>
    <string name="app_name">CarSpotter</string>
    <string name="app_title">Car Spotter</string>
    <string name="go_button_text">Go</string>
    <string name="title_activity_app_navigation">AppNavigation</string>
    <string name="title_collection">Collection</string>
    <string name="title_spotting">Spot</string>
    <string name="title_achievements">Achievements</string>

    <!-- Add car to collection -->
    <string name="title_car_make">Make</string>
    <string name="title_car_model">Model</string>
    <string name="title_car_year">Year</string>

    <string name="example_car_make">Porsche</string>
    <string name="example_car_model">911 GT3</string>
    <string name="example_car_year">2007</string>
    <string name="title_car_add">Add to collection</string>
    <string name="empty_fields">Some fields are empty</string>

    <string name="electric">Electric ?</string>
    <string name="select_photo">Select Photo</string>

    <!-- More details View -->
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="year">Year</string>
    <string name="electric_symbol">⚡</string>
    <string name="find_out_more">Find out more</string>

    <!-- Achievements View -->
    <string name="achievements_coming_soon">Achievements coming soon</string>
    <string name="more_details">More Details</string>

</resources>


