<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_collection">

    <fragment
        android:id="@+id/navigation_collection"
        android:name="sga111.seng440.carspotter.ui.collection.CollectionFragment"
        android:label="@string/title_collection"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/navigation_spotting"
        android:name="sga111.seng440.carspotter.ui.spotting.SpottingFragment"
        android:label="@string/title_spotting"
        tools:layout="@layout/fragment_spotting" />

    <fragment
        android:id="@+id/navigation_achievements"
        android:name="sga111.seng440.carspotter.ui.achievements.AchievementsFragment"
        android:label="@string/title_achievements"
        tools:layout="@layout/fragment_achievements" />
</navigation>
